fix: 크롤링 스케줄러 실행 쉘 스크립트 실행하게 수정