@@ -18,11 +18,12 @@ public class HotDealScrapingScheduler {
     @Scheduled(cron = "0 0/1 * * * ?")
     public void scrapingSchedule() throws IOException {
         log.info("success");
-//        ProcessBuilder processBuilder = new ProcessBuilder();
-////        processBuilder.command("sh", "/home/ubuntu/startScraping.sh","&");
-//        processBuilder.command("export");
-//        processBuilder.directory(new File(System.getProperty("user.home")));
-        java.lang.Process p = Runtime.getRuntime().exec("cd /home/ubuntu;export");
+        ProcessBuilder processBuilder = new ProcessBuilder();
+//        processBuilder.command("sh", "/home/ubuntu/startScraping.sh","&");
+        processBuilder.command("export");
+        processBuilder.directory(new File("/home/ubuntu"));
+        Process p = processBuilder.start();
+//        java.lang.Process p = Runtime.getRuntime().exec("cd /home/ubuntu;export");
         BufferedReader std = new BufferedReader(new InputStreamReader(p.getErrorStream()));
         String outputLine = "";
         while ((outputLine = std.readLine()) != null) {
